[package]
name = "kodegen_tools_reasoner"
version = "0.10.3"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-reasoner"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"
[lib]
name = "kodegen_tools_reasoner"
crate-type = ["lib"]  # Native library, not WASM

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_reasoner"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
# Core MCP tool infrastructure
kodegen_mcp_schema = { version = "0.10" }
kodegen_config = { version = "0.10" }
kodegen_server_http = { version = "0.10" }
kodegen_candle_agent = { version = "0.10" }
kodegen_config_manager = { version = "0.10" }

rmcp = { version = "0.11", features = [
    "client", "schemars", "server",
    "transport-child-process", "transport-io",
    "transport-streamable-http-client", "transport-streamable-http-client-reqwest"
]}

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation for MCP
schemars = "1"

# Error handling
anyhow = "1"

# UUID generation for node IDs
uuid = { version = "1", features = ["serde", "v4"] }

# LRU cache for state management
lru = "0.16"

# Regex for logical scoring (strategies/base.rs)
regex = "1"
lazy_static = "1"

# Async stream utilities
tokio-stream = "0.1"
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# Date/time for instance IDs
chrono = { version = "0.4", features = ["serde"] }

# TLS support
rustls = "0.23"

# System memory monitoring for cache pressure detection
sysinfo = "0.37"

# Workspace hack for dependency deduplication

[dev-dependencies]
kodegen_mcp_client = { version = "0.10" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "reasoner_demo"
path = "examples/reasoner_demo.rs"

[[bin]]
name = "kodegen-reasoner"
path = "src/main.rs"
